--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,14 @@
 // Check GETTING_STARTED.markdown for information regarding usage.
+
+subprojects {
+    apply plugin: 'idea'
+
+	configurations.all {
+        resolutionStrategy {
+            force 'com.liferay.portal:release.dxp.api:7.2.10'
+            force 'org.osgi:org.osgi.annotation.versioning:1.1.0'
+            force 'org.osgi:org.osgi.core:6.0.0'
+            force 'org.osgi:org.osgi.service.component.annotations:1.3.0'
+        }
+    }
+}
