--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,8 @@ liferay.workspace.modules.dir=modules
 liferay.workspace.themes.dir=themes
 liferay.workspace.wars.dir=modules
 microsoft.translator.subscription.key=
-liferay.workspace.product=dxp-7.2.10
+liferay.workspace.product=dxp-2024.q3.0
 
 org.gradle.jvmargs=-Xmx2g
+
+com.liferay.source.formatter.version=latest.release
